<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_2"
    android:scrollbarSize="8dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background=""
        android:textColor="@color/white"
        android:text="@string/TittleW"
        android:textColorHighlight="#000000"
        android:textColorLink="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="30dp" />

    <LinearLayout
        android:layout_width="327dp"
        android:layout_height="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="68dp">

        <TextView
            android:id="@+id/sumar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background=""
            android:text="@string/TextViewSuma"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/restar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background=""
            android:text="@string/TextViewResta"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/multiplicar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background=""
            android:text="@string/TextViewMulti"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/dividir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background=""
            android:text="@string/TextViewDivi"
            android:textSize="16sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background=""
        android:onClick="Calcular"
        android:text="@string/ButtonCalcular"
        android:textColorLink="#BD87BB"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="156dp" />

    <LinearLayout
        android:layout_width="365dp"
        android:layout_height="69dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="93dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background=""
            android:text="@string/TextViewOp"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/operacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:inputType="number"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>