<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySum"
    android:background="@drawable/img_2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TittleSuma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="66dp"
        tools:ignore="MissingConstraints"
        android:background=""
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="358dp"
        android:layout_height="136dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="120dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextViewNum1"
            android:background=""
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/primerNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
        android:background="@color/white">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextViewNum2"
            android:background=""
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/segundoNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:background="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="248dp"
        android:layout_height="49dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="257dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/sumar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="sumar"
            android:text="@string/ButtonSumar"
            android:background=""
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="112dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="322dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextViewResul"
            android:background=""
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/tvResul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:background="@color/white"/>

        <Button
            android:id="@+id/volver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background=""
            android:textColor="@color/white"
            android:onClick="Volver"
            android:text="@string/ButtonVolver"
            android:layout_marginTop="@color/white"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>